made dropdown text legible. Fixed hours worked slider

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -488,3 +488,7 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
 }
+
+#dropDown{
+    color:#36464F !important;
+}
